# FidelityFX-FSR2

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  changelog.md  clang-tidy.txt  release_notes.txt
libs/WinPixEventRuntime/: CMakeLists.txt
media/: atlas.dds  checkerboard.dds  composition_text.dds
media/dx11/: readme.txt
media/dx11/tank/: TankScene.sdkmesh  colorgradient.dds  desert_sky.dds  desertsky.sdkmesh  ground_diff.dds  ground_norm.dds  left_engine_diff.dds  left_engine_norm.dds  smokevol1.dds  turret_diff.dds  turret_norm.dds
media/dx11/ui/: AMD_FidelityFX.dds
src/Common/: CMakeLists.txt  FSR2_Sample.json
src/DX11/: CMakeLists.txt  FSR2DX11Sample.cpp  FSR2DX11Sample.h  FSR2_Sample_DX11.json  Fsr2Wrapper.cpp  Fsr2Wrapper.h
src/DX11/ResourceFiles/: GpuOpenIcon.rc  dpiaware.manifest
src/DX11/Shaders/: FSR2DX11Sample.hlsl
src/DX11/framework/amd_lib/: CMakeLists.txt
src/DX11/framework/amd_lib/shared/: .gitattributes  .gitignore  README.md
src/DX11/framework/amd_lib/shared/common/inc/: AMD_Types.h
src/DX11/framework/amd_lib/shared/d3d11/inc/: AMD_LIB.h
src/DX11/framework/amd_lib/shared/d3d11/src/: AMD_Buffer.cpp  AMD_Buffer.h  AMD_Common.cpp  AMD_Common.h  AMD_FullscreenPass.cpp  AMD_FullscreenPass.h  AMD_Rand.cpp  AMD_Rand.h  AMD_SaveRestoreState.cpp  AMD_SaveRestoreState.h  AMD_Serialize.cpp  AMD_Serialize.h  AMD_Texture2D.cpp  AMD_Texture2D.h  AMD_UnitCube.cpp  AMD_UnitCube.h
src/DX11/framework/amd_lib/shared/d3d11/src/DirectXTex/: DDSTextureLoader.cpp  DDSTextureLoader.h  ReadMe.txt  ScreenGrab.cpp  ScreenGrab.h
src/DX11/framework/amd_lib/shared/d3d11/src/Shaders/: AMD_FullscreenPass.hlsl  AMD_Quaternion.hlsl  AMD_UnitCube.hlsl
src/DX11/framework/amd_lib/shared/d3d11/src/Shaders/SeparableFilter/: FilterCommon.hlsl  FilterKernel.hlsl  HorizontalFilter.hlsl  VerticalFilter.hlsl
src/DX11/framework/amd_lib/shared/d3d11/src/Shaders/inc/: GS_FULLSCREEN_INDEX_RT.inc  PS_FULLSCREEN.inc  PS_UNIT_CUBE.inc  VS_CLIP_SPACE_CUBE.inc  VS_FULLSCREEN.inc  VS_FULLSCREEN_INDEX_RT.inc  VS_SCREENQUAD.inc  VS_UNIT_CUBE.inc
src/DX11/framework/amd_sdk/: CMakeLists.txt
src/DX11/framework/amd_sdk/inc/: AMD_SDK.h  ShaderCacheSampleHelper.h
src/DX11/framework/amd_sdk/media/: AMD.dds
src/DX11/framework/amd_sdk/src/: AMD_Mesh.cpp  AMD_Mesh.h  Geometry.cpp  Geometry.h  HUD.cpp  HUD.h  HelperFunctions.cpp  HelperFunctions.h  LineRender.cpp  LineRender.h  Magnify.cpp  Magnify.h  MagnifyTool.cpp  MagnifyTool.h  ShaderCache.cpp  ShaderCache.h  ShaderCacheSampleHelper.cpp  Sprite.cpp  Sprite.h  Timer.cpp  Timer.h  crc.cpp  crc.h
src/DX11/framework/amd_sdk/src/Shaders/: Line.hlsl  Sprite.hlsl
src/DX11/framework/dxut/: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  DXUT-config.cmake.in  DXUT_2017_Win10.sln  DXUT_2019_Win10.sln  DXUT_DirectXTK_2017_Win10.sln  DXUT_DirectXTK_2019_Win10.sln  HISTORY.md  LICENSE  README.md
src/DX11/framework/dxut/Core/: DDSTextureLoader.cpp  DDSTextureLoader.h  DXUT.cpp  DXUT.h  DXUTDevice11.cpp  DXUTDevice11.h  DXUT_2017_Win10.vcxproj  DXUT_2019_Win10.vcxproj  DXUT_2019_Win10.vcxproj.filters  DXUT_DirectXTK_2017_Win10.vcxproj  DXUT_DirectXTK_2017_Win10.vcxproj.filters  DXUT_DirectXTK_2019_Win10.vcxproj  DXUTmisc.cpp  DXUTmisc.h  ScreenGrab.cpp  ScreenGrab.h  WICTextureLoader.cpp  WICTextureLoader.h  dxerr.cpp  dxerr.h
src/DX11/framework/dxut/Optional/: DXUTLockFreePipe.h  DXUTOpt_2017_Win10.vcxproj  DXUTOpt_2017_Win10.vcxproj.filters  DXUTOpt_2019_Win10.vcxproj  DXUTOpt_DirectXTK_2017_Win10.vcxproj  DXUTOpt_DirectXTK_2017_Win10.vcxproj.filters  DXUTOpt_DirectXTK_2019_Win10.vcxproj  DXUTcamera.cpp  DXUTcamera.h  DXUTgui.cpp  DXUTgui.h  DXUTguiIME.cpp  DXUTguiIME.h  DXUTres.cpp  DXUTres.h  DXUTsettingsdlg.cpp  DXUTsettingsdlg.h  ImeUi.cpp  ImeUi.h  SDKmesh.cpp  SDKmesh.h  SDKmisc.cpp  SDKmisc.h
src/DX12/: AnimatedTexture.cpp  AnimatedTexture.h  AnimatedTexture.hlsl  CMakeLists.txt  DebugBlit.hlsl  FSR2Sample.cpp  FSR2Sample.h  FSRPass.hlsl  GPUFrameRateLimiter.cpp  GPUFrameRateLimiter.h  GPUFrameRateLimiter.hlsl  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h  UI.cpp  UI.h  UpscaleContext.cpp  UpscaleContext.h  UpscaleContext_FSR2_API.cpp  UpscaleContext_FSR2_API.h  UpscaleContext_Spatial.cpp  UpscaleContext_Spatial.h  UpscaleSpatial.hlsl  stdafx.cpp  stdafx.h
src/GpuParticleShaders/: Globals.h  ParallelSortCS.hlsl  ParticleEmit.hlsl  ParticleHelpers.h  ParticleRender.hlsl  ParticleSimulation.hlsl  ParticleStructs.h  RenderScene.hlsl  ShaderConstants.h  SimulationBindings.h  fp16util.h
src/GpuParticles/: ParticleHelpers.h  ParticleSystem.h  ParticleSystemInternal.h
src/GpuParticles/dx12/: GPUParticleSystem.cpp  ParallelSort.cpp  ParallelSort.h
src/GpuParticles/vk/: BufferHelper.h  GPUParticleSystem.cpp  ParallelSort.cpp  ParallelSort.h
src/VK/: AnimatedTexture.cpp  AnimatedTexture.h  AnimatedTexture.hlsl  CMakeLists.txt  DebugBlit.hlsl  FSR2Sample.cpp  FSR2Sample.h  GPUFrameRateLimiter.cpp  GPUFrameRateLimiter.h  GPUFrameRateLimiter.hlsl  Renderer.cpp  Renderer.h  UI.cpp  UI.h  UpscaleContext.cpp  UpscaleContext.h  UpscaleContext_FSR2_API.cpp  UpscaleContext_FSR2_API.h  UpscaleContext_Spatial.cpp  UpscaleContext_Spatial.h  stdafx.cpp  stdafx.h
src/VK/offscreen/: Vulkan_FSR2.hpp  helper.hpp  main.cpp
src/ffx-fsr2-api/: CMakeLists.txt  ffx_assert.cpp  ffx_fsr2.cpp  ffx_fsr2.h  ffx_fsr2_interface.h  ffx_fsr2_maximum_bias.h  ffx_fsr2_private.h  ffx_types.h
src/ffx-fsr2-api/dx11/: CMakeLists.txt  ffx_fsr2_dx11.cpp  ffx_fsr2_dx11.h
src/ffx-fsr2-api/dx11/shaders/: ffx_fsr2_shaders_dx11.cpp  ffx_fsr2_shaders_dx11.h
src/ffx-fsr2-api/dx12/: CMakeLists.txt  ffx_fsr2_dx12.cpp  ffx_fsr2_dx12.h
src/ffx-fsr2-api/shaders/: ffx_common_types.h  ffx_core_cpu.h  ffx_core_glsl.h  ffx_core_hlsl.h  ffx_fsr1.h  ffx_fsr2_accumulate.h  (+28 more)
src/ffx-fsr2-api/vk/: CMakeLists.txt  ffx_fsr2_vk.cpp  ffx_fsr2_vk.h
src/ffx-fsr2-api/vk/shaders/: ffx_fsr2_shaders_vk.cpp  ffx_fsr2_shaders_vk.h
src/ffx-parallelsort/: FFX_ParallelSort.h
tools/sc/: FidelityFX_SC.py  FidelityFX_SC.sh
(+4 files in other folders)
